# MoveAss

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  test.py  utils.py
.github/workflows/: build_format_test_deploy.yml  format_deploy.yml
example_fitbit_csv_data/: example_data1.csv  example_data2.csv  example_data3.csv  example_data4.csv  example_data5.csv
site/: index.html
site/src/: index.js  index.ts
site/test/: index.test.js  index.test.ts
src/: app.py  test.py  utils.py
src/console_scripts/: console_scripts.py
src/templates/: status_table.html  upload_file.html
templates/: physical_activity.html  sedentary_time.html  select_dob.html  sleep_time.html  upload_file.html
